--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "argon2": "^0.30.3",
     "connect-session-sequelize": "^7.1.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
